--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="header">
         <div class="logo">
             <a href="#">
-                <img src="/assets/img/netflixlogo.png" alt="">
+                <img src="./assets/img/netflixlogo.png" alt="">
             </a>
         </div>
     </div>
@@ -45,7 +45,7 @@
 
             <div class="login_footer">
                 <div class="login_facebook">
-                    <span><img height="20px" src="/assets/img/Facebook_logo.png" alt=""></span>
+                    <span><img height="20px" src="./assets/img/Facebook_logo.png" alt=""></span>
                     <span><a href="#">Conectar com o facebook</a></span>
                 </div>
 
